// Copyright 2020 The Swarm Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package chunkinfo;

option go_package = "pb";

message ChunkPyramidHashReq {
  bytes RootCid = 1;
}

message ChunkPyramidHashResp{
  repeated bytes Hash = 1;
}

message ChunkPyramidChunkReq {
  bytes Hash = 1;
  bytes RootCid = 2;
}

message ChunkPyramidChunkResp{
  bytes Chunk = 1;
}

message ChunkInfoReq {
  bytes RootCid = 1;
  int64 CreateTime = 2;
}

message ChunkInfoResp {
  bytes RootCid = 1;
  map<string, bytes> Presence = 2;
}
